@@ -4,6 +4,10 @@
 
 .. module:: new
    :synopsis: Interface to the creation of runtime implementation objects.
+   :deprecated:
+
+.. deprecated:: The new module has been removed in Python 3.0.
+
 .. sectionauthor:: Moshe Zadka <moshez@zadka.site.co.il>
 
 
